# CMinioPython

./: .gitignore  LICENSE  README.md  setup.py
src/: CMakeLists.txt  main.cpp  minio_api.cpp  minio_api.h
src/sync/: CMakeLists.txt  sync.cpp
tests/: connect_test.py
